--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-wifi-config-ap (1.0.0-1) unstable; urgency=low
+simple-wifi (1.0.0-1) unstable; urgency=low
 
   * Version 1.0.0 release.
   * Hostname-based SSID generation.
 
  -- R. Moeijes <simpelmuis@gmail.com>  Thu, 12 Sep 2025 12:00:00 +0000
 
-wifi-config-ap (0.1.0-1) unstable; urgency=low
+simple-wifi (0.1.0-1) unstable; urgency=low
 
   * Initial release.
 
